--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "require": {
         "php": "^8.2",
         "codeigniter4/framework": "^4.7",
-        "codeigniter4/shield": "1.1"
+        "codeigniter4/shield": "1.1",
+        "phpoffice/phpspreadsheet": "2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
